RESOLVED FIXED300055
Fix iOS Simulated Keyboard Events Crash (event-timing)
https://bugs.webkit.org/show_bug.cgi?id=300055
Summary Fix iOS Simulated Keyboard Events Crash (event-timing)
Franco Vieira de Souza
Reported 2025-10-02 16:05:50 PDT
API tests are failing: KeyboardInputTests.InsertDictationAlternativesSimulatingKeyboardInput and KeyboardInputTests.InsertTextSimulatingKeyboardInput
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-02 16:06:04 PDT
Franco Vieira de Souza
Comment 2 2025-10-02 16:13:05 PDT
EWS
Comment 3 2025-10-03 14:01:53 PDT
Committed 300968@main (2f84d00fc315): <https://commits.webkit.org/300968@main> Reviewed commits have been landed. Closing PR #51704 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.