Fix iOS Simulated Keyboard Events Crash (event-timing) https://bugs.webkit.org/show_bug.cgi?id=300055 rdar://161854148

Reviewed by Abrar Rahman Protyasha.

Avoids unsafe downcast of key{up/down/press} events to KeyboardEvent,
which was crashing on iOS simulated keyboard events. Crashes were
occurring in these two API tests:

- KeyboardInputTests.InsertDictationAlternativesSimulatingKeyboardInput
- KeyboardInputTests.InsertTextSimulatingKeyboardInput

(these tests are not currently being exercised by automation
because the feature is currently behind a feature flag)

* Source/WebCore/page/LocalDOMWindow.cpp:
(WebCore::LocalDOMWindow::computeInteractionID):
(WebCore::LocalDOMWindow::finalizeEventTimingEntry):

Canonical link: https://commits.webkit.org/300968@main