Source/WebCore/page/LocalDOMWindow.cpp
@@ -2499,8 +2499,11 @@ EventTimingInteractionID LocalDOMWindow::computeInteractionID(Event& event, Even
 
     switch (type) {
     case EventType::keyup: {
-        ASSERT(event.isKeyboardEvent());
-        auto keyboardEvent = downcast<KeyboardEvent>(&event);
+        RefPtr keyboardEvent = dynamicDowncast<KeyboardEvent>(&event);
+        // Simulated keyboard inputs such as dictation are not KeyboardEvent:
+        if (!keyboardEvent) [[unlikely]]
+            return { };
+
         if (keyboardEvent->isComposing())
             return { };
 
@@ -2529,11 +2532,11 @@ EventTimingInteractionID LocalDOMWindow::computeInteractionID(Event& event, Even
         return { };
     }
     case EventType::input: {
-        // Return early for events not related to text, such as checkbox toggling:
-        if (!event.isInputEvent())
+        // Fails for events not related to text, such as checkbox toggling:
+        RefPtr inputEvent = dynamicDowncast<InputEvent>(&event);
+        if (!inputEvent)
             return { };
 
-        auto inputEvent = downcast<InputEvent>(&event);
         if (!inputEvent->isInputMethodComposing())
             return { };
 
@@ -2653,7 +2656,12 @@ void LocalDOMWindow::finalizeEventTimingEntry(PerformanceEventTimingCandidate& e
         return;
     }
     case EventType::keydown: {
-        auto keyboardEvent = downcast<KeyboardEvent>(&event);
+        RefPtr keyboardEvent = dynamicDowncast<KeyboardEvent>(&event);
+        // Simulated keyboard inputs such as dictation are not KeyboardEvent:
+        if (!keyboardEvent) [[unlikely]] {
+            m_performanceEventTimingCandidates.append(entry);
+            return;
+        }
         entry.interactionID = keyboardEvent->interactionID();
         auto keyCode = keyboardEvent->keyCode();
         // FIXME: checking for keyCode 229 (IME) is against the spec, but it's
@@ -2679,7 +2687,11 @@ void LocalDOMWindow::finalizeEventTimingEntry(PerformanceEventTimingCandidate& e
         return;
     }
     case EventType::keypress: {
-        auto keyboardEvent = downcast<KeyboardEvent>(&event);
+        RefPtr keyboardEvent = dynamicDowncast<KeyboardEvent>(&event);
+        if (!keyboardEvent) [[unlikely]] {
+            m_performanceEventTimingCandidates.append(entry);
+            return;
+        }
         auto keyCode = keyboardEvent->keyCodeForKeyDown();
         auto it = m_pendingKeyDowns.find(keyCode);
         if (it == m_pendingKeyDowns.end()) {
